--- a/index.html
+++ b/index.html
@@ -1355,9 +1355,9 @@ var text;
    // If the letter is "hydrogen"
    if (letter === "HYDROGEN") {
      text = "<br/>"
-        + "<br/>"
         + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
+        + "<br/>"
         + "Atomic Symbol:" + "<strong>" + "H" + "</strong>"
         + "<br/>"
         + "Atomic Number: 1"  + "<br/>"
@@ -1378,7 +1378,8 @@ var text;
         + "Standard Atomic Weight: 4.0026"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 24.5874"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
     // If the letter is "lithium"
    } else if (letter === "LITHIUM") {
         text = "<br/>"
@@ -1391,7 +1392,8 @@ var text;
         + "Standard Atomic Weight:  6.94"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
         + "Ionization Energy: 5.3917"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
        // If the letter is "Beryllium"
    } else if (letter === "BERYLLIUM") {
         text = "<br/>"
@@ -1404,8 +1406,9 @@ var text;
         + "Standard Atomic Weight: 9.0122"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
         + "Ionization Energy: 9.32277"  + "<br/>"
-        + "<br/>";
-       // If the letter is "Boron"
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        // If the letter is "Boron"
    } else if (letter === "BORON") {
         text = "<br/>"
         + "<br/>"
@@ -1417,8 +1420,9 @@ var text;
         + "Standard Atomic Weight:  10.81"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
         + "Ionization Energy: 8.2980"  + "<br/>"
-        + "<br/>";
-   } else if (letter === "CARBON") {
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+     } else if (letter === "CARBON") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Carbon" + "</strong>"
@@ -1429,7 +1433,8 @@ var text;
         + "Standard Atomic Weight:   12.011"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 11.2603"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
    } else if (letter === "NITROGEN") {
         text = "<br/>"
         + "<br/>"
@@ -1441,7 +1446,8 @@ var text;
         + "Standard Atomic Weight:   14.007"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
         + "Ionization Energy: 14.5341"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
    } else if (letter === "OXYGEN") {
         text = "<br/>"
         + "<br/>"
@@ -1453,7 +1459,8 @@ var text;
         + "Standard Atomic Weight:   15.999"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>4</sup>"  + "<br/>"
         + "Ionization Energy: 13.6181"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "FLOURINE") {
         text = "<br/>"
         + "<br/>"
@@ -1465,7 +1472,8 @@ var text;
         + "Standard Atomic Weight: 18.998"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
         + "Ionization Energy: 17.4228"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "NEON") {
         text = "<br/>"
         + "<br/>"
@@ -1477,7 +1485,8 @@ var text;
         + "Standard Atomic Weight: 18.998"  + "<br/>"
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
         + "Ionization Energy: 21.5645"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "SODIUM") {
         text = "<br/>"
         + "<br/>"
@@ -1489,7 +1498,8 @@ var text;
         + "Standard Atomic Weight: 22.990"  + "<br/>"
         + "Ground State Configuration: [Ne]3s"  + "<br/>"
         + "Ionization Energy: 5.1391"  + "<br/>"
-        + "<br/>"; 
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "MAGNESIUM") {
         text = "<br/>"
         + "<br/>"
@@ -1501,7 +1511,8 @@ var text;
         + "Standard Atomic Weight: 24.305"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 7.6462"  + "<br/>"
-        + "<br/>"; 
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
        } else if (letter === "ALUMINUM") {
         text = "<br/>"
         + "<br/>"
@@ -1513,7 +1524,8 @@ var text;
         + "Standard Atomic Weight: 26.982"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p"  + "<br/>"
         + "Ionization Energy: 5.9858"  + "<br/>"
-        + "<br/>"; 
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "SILICON") {
         text = "<br/>"
         + "<br/>"
@@ -1525,7 +1537,8 @@ var text;
         + "Standard Atomic Weight:  28.085"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 8.1517"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "PHOSPHORUS") {
         text = "<br/>"
         + "<br/>"
@@ -1537,7 +1550,8 @@ var text;
         + "Standard Atomic Weight: 30.974"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>3</sup>"  + "<br/>"
         + "Ionization Energy: 10.4867"  + "<br/>"
-        + "<br/>";   
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";  
       } else if (letter === "SULFUR") {
         text = "<br/>"
         + "<br/>"
@@ -1549,7 +1563,8 @@ var text;
         + "Standard Atomic Weight:  32.06"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>4</sup>"  + "<br/>"
         + "Ionization Energy: 10.3600"  + "<br/>"
-        + "<br/>";
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "CHLORINE") {
         text = "<br/>"
         + "<br/>"
@@ -1561,7 +1576,8 @@ var text;
         + "Standard Atomic Weight: 35.45"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
         + "Ionization Energy: 12.9676"  + "<br/>"
-        + "<br/>";        
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";       
      } else if (letter === "Next") {
         text = "<br/>"
         + "<br/>"
@@ -1573,10 +1589,10 @@ var text;
         + "Standard Atomic Weight: 39.948"  + "<br/>"
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
         + "Ionization Energy: 12.9676"  + "<br/>"
-        + "<br/>"; 
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
         
-   // If the letter is anything else
-      
+   // If the letter is anything else     
    // If the letter is "b" or "d"
    } else if (letters === "b" || letters === "d") {
      text = "Close, but not close enough.";
