--- a/index.html
+++ b/index.html
@@ -1354,9 +1354,9 @@ var text;
    // If the letter is "hydrogen"
    if (letter === "HYDROGEN") {
      text = "<br/>"
+        + "<br/>"
         + "<strong>" + "Hydrogen" + "</strong>"
         + "<br/>" 
-        + "<br/>"
         + "Atomic Symbol:" + "<strong>" + "H" + "</strong>"
         + "<br/>"
         + "Atomic Number: 1"  + "<br/>"
@@ -1378,7 +1378,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 24.5874"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/helium--_us_1.mp3'>link to pronunciation</a>";
     // If the letter is "lithium"
    } else if (letter === "LITHIUM") {
         text = "<br/>"
@@ -1392,7 +1392,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
         + "Ionization Energy: 5.3917"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/lithium--_us_1.mp3'>link to pronunciation</a>";
        // If the letter is "Beryllium"
    } else if (letter === "BERYLLIUM") {
         text = "<br/>"
