--- a/index.html
+++ b/index.html
@@ -1577,20 +1577,33 @@ var text;
         + "Ionization Energy: 12.9676"  + "<br/>"
         + "<br/>"
         + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";       
-     } else if (letter === "Next") {
+     } else if (letter === "ARGON") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Argon" + "</strong>"
         + "<br/>"
         + "Atomic Symbol:" + "<strong>" + "Ar" + "</strong>"
         + "<br/>"
-        + "Atomic Number: 17"  + "<br/>"
+        + "Atomic Number: 18"  + "<br/>"
         + "Standard Atomic Weight: 39.948"  + "<br/>"
-        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
-        + "Ionization Energy: 12.9676"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>6</sup>"  + "<br/>"
+        + "Ionization Energy: 15.7596"  + "<br/>"
         + "<br/>"
         + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
-        
+     } else if (letter === "NEXT") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Argon" + "</strong>"
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "Ar" + "</strong>"
+        + "<br/>"
+        + "Atomic Number: 18"  + "<br/>"
+        + "Standard Atomic Weight: 39.948"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>6</sup>"  + "<br/>"
+        + "Ionization Energy: 15.7596"  + "<br/>"
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+           
    // If the letter is anything else     
    // If the letter is "b" or "d"
    } else if (letters === "b" || letters === "d") {
