--- a/index.html
+++ b/index.html
@@ -1590,17 +1590,17 @@ var text;
         + "Ionization Energy: 15.7596"  + "<br/>"
         + "<br/>"
         + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
-     } else if (letter === "NEXT") {
+     } else if (letter === "POTASSIUM") {
         text = "<br/>"
         + "<br/>"
-        + "<strong>" + "Argon" + "</strong>"
+        + "<strong>" + "Potassium" + "</strong>"
         + "<br/>"
-        + "Atomic Symbol:" + "<strong>" + "Ar" + "</strong>"
+        + "Atomic Symbol:" + "<strong>" + "K" + "</strong>"
         + "<br/>"
-        + "Atomic Number: 18"  + "<br/>"
-        + "Standard Atomic Weight: 39.948"  + "<br/>"
-        + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>6</sup>"  + "<br/>"
-        + "Ionization Energy: 15.7596"  + "<br/>"
+        + "Atomic Number: 19"  + "<br/>"
+        + "Standard Atomic Weight: 39.098"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s"  + "<br/>"
+        + "Ionization Energy: 5.1391"  + "<br/>"
         + "<br/>"
         + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
            
