--- a/index.html
+++ b/index.html
@@ -1406,7 +1406,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
         + "Ionization Energy: 9.32277"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/beryllium--_us_1.mp3'>link to pronunciation</a>";
         // If the letter is "Boron"
    } else if (letter === "BORON") {
         text = "<br/>"
@@ -1420,7 +1420,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
         + "Ionization Energy: 8.2980"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/boron--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "CARBON") {
         text = "<br/>"
         + "<br/>"
