--- a/index.html
+++ b/index.html
@@ -1600,9 +1600,22 @@ var text;
         + "Atomic Number: 19"  + "<br/>"
         + "Standard Atomic Weight: 39.098"  + "<br/>"
         + "Ground State Configuration: [Ne]3s"  + "<br/>"
-        + "Ionization Energy: 5.1391"  + "<br/>"
+        + "Ionization Energy: 4.3407"  + "<br/>"
         + "<br/>"
         + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+     } else if (letter === "CALCIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Calcium" + "</strong>"
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "Ca" + "</strong>"
+        + "<br/>"
+        + "Atomic Number: 20"  + "<br/>"
+        + "Standard Atomic Weight: 40.078"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 6.1132"  + "<br/>"
+        + "<br/>"
+        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>"; 
            
    // If the letter is anything else     
    // If the letter is "b" or "d"
