--- a/index.html
+++ b/index.html
@@ -1589,7 +1589,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>6</sup>"  + "<br/>"
         + "Ionization Energy: 15.7596"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/argon--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "POTASSIUM") {
         text = "<br/>"
         + "<br/>"
@@ -1602,7 +1602,7 @@ var text;
         + "Ground State Configuration: [Ne]3s"  + "<br/>"
         + "Ionization Energy: 4.3407"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/potassium--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "CALCIUM") {
         text = "<br/>"
         + "<br/>"
@@ -1615,7 +1615,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 6.1132"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/calicum--_us_1.mp3'>link to pronunciation</a>"; 
+        + "<a href='/audio/calcium--_us_1.mp3'>link to pronunciation</a>"; 
            
    // If the letter is anything else     
    // If the letter is "b" or "d"
