--- a/index.html
+++ b/index.html
@@ -1433,7 +1433,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 11.2603"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/carbon--_us_1.mp3'>link to pronunciation</a>";
    } else if (letter === "NITROGEN") {
         text = "<br/>"
         + "<br/>"
@@ -1446,7 +1446,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
         + "Ionization Energy: 14.5341"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/nitrogen--_us_1.mp3'>link to pronunciation</a>";
    } else if (letter === "OXYGEN") {
         text = "<br/>"
         + "<br/>"
@@ -1459,7 +1459,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>4</sup>"  + "<br/>"
         + "Ionization Energy: 13.6181"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/oxygen--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "FLOURINE") {
         text = "<br/>"
         + "<br/>"
@@ -1472,7 +1472,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
         + "Ionization Energy: 17.4228"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/flourine--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "NEON") {
         text = "<br/>"
         + "<br/>"
@@ -1485,7 +1485,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
         + "Ionization Energy: 21.5645"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/neon--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "SODIUM") {
         text = "<br/>"
         + "<br/>"
@@ -1511,7 +1511,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 7.6462"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/magnesium--_us_1.mp3'>link to pronunciation</a>";
        } else if (letter === "ALUMINUM") {
         text = "<br/>"
         + "<br/>"
@@ -1524,7 +1524,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p"  + "<br/>"
         + "Ionization Energy: 5.9858"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/aluminum--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "SILICON") {
         text = "<br/>"
         + "<br/>"
@@ -1537,7 +1537,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 8.1517"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/silicon--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "PHOSPHORUS") {
         text = "<br/>"
         + "<br/>"
@@ -1550,7 +1550,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>3</sup>"  + "<br/>"
         + "Ionization Energy: 10.4867"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";  
+        + "<a href='/audio/phosphorus--_us_1.mp3'>link to pronunciation</a>";  
       } else if (letter === "SULFUR") {
         text = "<br/>"
         + "<br/>"
@@ -1563,7 +1563,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>4</sup>"  + "<br/>"
         + "Ionization Energy: 10.3600"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/sulfur--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "CHLORINE") {
         text = "<br/>"
         + "<br/>"
@@ -1576,7 +1576,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
         + "Ionization Energy: 12.9676"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";       
+        + "<a href='/audio/chlorine--_us_1.mp3'>link to pronunciation</a>";       
      } else if (letter === "ARGON") {
         text = "<br/>"
         + "<br/>"
