--- a/index_backup1.html
+++ b/index_backup1.html
@@ -1331,7 +1331,7 @@
  <footer>
   <div class="left100">
      <p tabindex="0">This page last modified or reviewed</p>
-        Content: 26 February 2020<br />
+        Content: 26 March 2020<br />
         WebAim: 6 February 2020 0<br />
         NuHTML: 27 January 2020 multiple aria-label warnings (expected, in this case)<br />
         Note: Speech Synthesis referenced in builing this page https://www.w3.org/TR/speech-synthesis11/#S1.1<br />
@@ -1406,7 +1406,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup> 2s"  + "<br/>"
         + "Ionization Energy: 9.32277"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/beryllium--_us_1.mp3'>link to pronunciation</a>";
         // If the letter is "Boron"
    } else if (letter === "BORON") {
         text = "<br/>"
@@ -1420,7 +1420,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p"  + "<br/>"
         + "Ionization Energy: 8.2980"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/boron--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "CARBON") {
         text = "<br/>"
         + "<br/>"
@@ -1433,7 +1433,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 11.2603"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/carbon--_us_1.mp3'>link to pronunciation</a>";
    } else if (letter === "NITROGEN") {
         text = "<br/>"
         + "<br/>"
@@ -1446,7 +1446,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>3</sup>"  + "<br/>"
         + "Ionization Energy: 14.5341"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/nitrogen--_us_1.mp3'>link to pronunciation</a>";
    } else if (letter === "OXYGEN") {
         text = "<br/>"
         + "<br/>"
@@ -1459,7 +1459,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>4</sup>"  + "<br/>"
         + "Ionization Energy: 13.6181"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/oxygen--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "FLOURINE") {
         text = "<br/>"
         + "<br/>"
@@ -1472,7 +1472,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>5</sup>"  + "<br/>"
         + "Ionization Energy: 17.4228"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/flourine--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "NEON") {
         text = "<br/>"
         + "<br/>"
@@ -1485,7 +1485,7 @@ var text;
         + "Ground State Configuration: 1s<sup>2</sup>2s<sup>2</sup>2p<sup>6</sup>"  + "<br/>"
         + "Ionization Energy: 21.5645"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/neon--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "SODIUM") {
         text = "<br/>"
         + "<br/>"
@@ -1511,7 +1511,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 7.6462"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/magnesium--_us_1.mp3'>link to pronunciation</a>";
        } else if (letter === "ALUMINUM") {
         text = "<br/>"
         + "<br/>"
@@ -1524,7 +1524,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p"  + "<br/>"
         + "Ionization Energy: 5.9858"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/aluminum--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "SILICON") {
         text = "<br/>"
         + "<br/>"
@@ -1537,7 +1537,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 8.1517"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/silicon--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "PHOSPHORUS") {
         text = "<br/>"
         + "<br/>"
@@ -1550,7 +1550,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>3</sup>"  + "<br/>"
         + "Ionization Energy: 10.4867"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";  
+        + "<a href='/audio/phosphorus--_us_1.mp3'>link to pronunciation</a>";  
       } else if (letter === "SULFUR") {
         text = "<br/>"
         + "<br/>"
@@ -1563,7 +1563,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>4</sup>"  + "<br/>"
         + "Ionization Energy: 10.3600"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/sulfur--_us_1.mp3'>link to pronunciation</a>";
       } else if (letter === "CHLORINE") {
         text = "<br/>"
         + "<br/>"
@@ -1576,7 +1576,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>5</sup>"  + "<br/>"
         + "Ionization Energy: 12.9676"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";       
+        + "<a href='/audio/chlorine--_us_1.mp3'>link to pronunciation</a>";       
      } else if (letter === "ARGON") {
         text = "<br/>"
         + "<br/>"
@@ -1589,7 +1589,7 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>3p<sup>6</sup>"  + "<br/>"
         + "Ionization Energy: 15.7596"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/argon--_us_1.mp3'>link to pronunciation</a>";
      } else if (letter === "POTASSIUM") {
         text = "<br/>"
         + "<br/>"
@@ -1600,9 +1600,22 @@ var text;
         + "Atomic Number: 19"  + "<br/>"
         + "Standard Atomic Weight: 39.098"  + "<br/>"
         + "Ground State Configuration: [Ne]3s"  + "<br/>"
-        + "Ionization Energy: 5.1391"  + "<br/>"
+        + "Ionization Energy: 4.3407"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/hydrogen--_us_1.mp3'>link to pronunciation</a>";
+        + "<a href='/audio/potassium--_us_1.mp3'>link to pronunciation</a>";
+     } else if (letter === "CALCIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Calcium" + "</strong>"
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "Ca" + "</strong>"
+        + "<br/>"
+        + "Atomic Number: 20"  + "<br/>"
+        + "Standard Atomic Weight: 40.078"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
+        + "Ionization Energy: 6.1132"  + "<br/>"
+        + "<br/>"
+        + "<a href='/audio/calcium--_us_1.mp3'>link to pronunciation</a>"; 
            
    // If the letter is anything else     
    // If the letter is "b" or "d"
