--- a/index.html
+++ b/index.html
@@ -1590,7 +1590,7 @@ var text;
         + "Ionization Energy: 15.7596"  + "<br/>"
         + "<br/>"
         + "<a href='/audio/argon--_us_1.mp3'>link to pronunciation</a>";
-     } else if (letter === "POTASSIUM") {
+      } else if (letter === "POTASSIUM") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Potassium" + "</strong>"
@@ -1603,7 +1603,7 @@ var text;
         + "Ionization Energy: 4.3407"  + "<br/>"
         + "<br/>"
         + "<a href='/audio/potassium--_us_1.mp3'>link to pronunciation</a>";
-     } else if (letter === "CALCIUM") {
+      } else if (letter === "CALCIUM") {
         text = "<br/>"
         + "<br/>"
         + "<strong>" + "Calcium" + "</strong>"
@@ -1615,7 +1615,20 @@ var text;
         + "Ground State Configuration: [Ne]3s<sup>2</sup>"  + "<br/>"
         + "Ionization Energy: 6.1132"  + "<br/>"
         + "<br/>"
-        + "<a href='/audio/calcium--_us_1.mp3'>link to pronunciation</a>"; 
+        + "<a href='/audio/calcium--_us_1.mp3'>link to pronunciation</a>";
+      } else if (letter === "SCANDIUM") {
+        text = "<br/>"
+        + "<br/>"
+        + "<strong>" + "Scandium" + "</strong>"
+        + "<br/>"
+        + "Atomic Symbol:" + "<strong>" + "Sc" + "</strong>"
+        + "<br/>"
+        + "Atomic Number: 19"  + "<br/>"
+        + "Standard Atomic Weight: 39.098"  + "<br/>"
+        + "Ground State Configuration: [Ne]3s"  + "<br/>"
+        + "Ionization Energy: 4.3407"  + "<br/>"
+        + "<br/>"
+        + "<a href='/audio/potassium--_us_1.mp3'>link to pronunciation</a>";
            
    // If the letter is anything else     
    // If the letter is "b" or "d"
